--- a/bin.html
+++ b/bin.html
@@ -17,6 +17,9 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
 
+// Mike Bostock's block (https://bl.ocks.org/mbostock/4062045)
+// reconfigured to load from http://umbcvic.github.io/fiddle/bin.html
+
 var svg = d3.select("svg"),
     width = +svg.attr("width"),
     height = +svg.attr("height");
