--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 <div id='container'>
 </div>
 
+<!-- Open the JSFiddle files -->
+
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="demo.js"></script>
